# ITMO-CV-ADV

./: .gitignore  README.md  pyproject.toml
src/hw_1/: README.md  sift_flann.ipynb
src/hw_3D_CV/: README.md  boxes_2D.py  boxes_3D.py  distance_and_yaw.py  processing_pipeline.py  projection.py  requirements.txt
src/hw_3d_cv/: README.md
src/hw_7/: README.md  app.py  app_updated.py  custom_model.py  gest_checking_updated.py
src/hw_7/train_model/: README.md  experiment.ipynb  requirements.txt
src/hw_7/train_model/utils/: util_dataset.py
src/hw_7/train_model_freihand/training/: model.py
src/hw_7/train_model_freihand/utils/: fh_utils.py
src/hw_7/train_model_ultralytics_data/: README.md  experiments.ipynb
src/hw_metric_learning/: download_dataset.py  train_1.py  train_2.py  validate_with_basefile.py
src/hw_metric_learning/homework/: README.md  baseline.py  baseline_with_optuna.py  basic.py  contrastive_loss.py  distance_weighted.py  margin_based.py  proxy-based.py  range_loss.py  validate_with_basefile.py
src/hw_yolo/: dataset.py  loss.py  metrics.py  model.py  train.py  utils.py
src/image_matching/: README.md  submission.csv
src/keypoint_detection/: README.md  app.py  app_updated.py  custom_model.py  gest_checking.py  gest_checking_updated.py
src/keypoint_detection/train_model/: README.md  experiment.ipynb  requirements.txt
src/keypoint_detection/train_model_ultralytics_data/: README.md  experiments.ipynb
src/yolo_from_scratch/: loss.py  metrics.py  model.py  report_en.md  train.py  utils.py
(+2 files in other folders)
