[tool.poetry]
name = "itmo-cv-adv"
version = "0.1.0"
description = ""
authors =  ["Evgenii Iurin <iurin.evgenii@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.*"
pre-commit = "^4.2.0"
opencv-python = "^4.11.0.86"
ipykernel = "^6.29.5"
tqdm = "^4.67.1"
imagehash = "^4.3.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
torch = "^2.7.0"
torchvision = "^0.22.0"
tensorboard = "2.18"
optuna = "^4.3.0"
fiftyone = "^1.4.1"
timm = "^1.0.15"
mediapipe = "^0.10.21"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
